Recovering the state of an actor

--- a/akka/Hello-Akka/src/main/resources/application.conf
+++ b/akka/Hello-Akka/src/main/resources/application.conf
@@ -7,3 +7,16 @@ akka.actor.mailbox.requirements {
 custom-dispatcher-mailbox {
   mailbox-type = "com.packt.chapter1.MyUnboundedMailbox"
 }
+akka {
+  actor {
+    serializers {
+      java = "akka.serialization.JavaSerializer"
+    }
+
+    serialization-bindings {
+      "com.packt.chapter6.FriendAdded" = java
+      "com.packt.chapter6.FriendRemoved" = java
+      "com.packt.chapter6.FriendState" = java
+    }
+  }
+}
