Creating a persistence FSM model

--- a/akka/Hello-Akka/src/main/resources/application.conf
+++ b/akka/Hello-Akka/src/main/resources/application.conf
@@ -17,6 +17,8 @@ akka {
       "com.packt.chapter6.FriendAdded" = java
       "com.packt.chapter6.FriendRemoved" = java
       "com.packt.chapter6.FriendState" = java
+      "com.packt.chapter6.LatchDownClosed" = java
+      "com.packt.chapter6.LatchDownOpen$" = java
     }
   }
 }
