--- a/akka/Hello-Akka/src/main/resources/application.conf
+++ b/akka/Hello-Akka/src/main/resources/application.conf
@@ -9,6 +9,8 @@ custom-dispatcher-mailbox {
 }
 akka {
   actor {
+    provider = "akka.remote.RemoteActorRefProvider"
+
     serializers {
       java = "akka.serialization.JavaSerializer"
     }
@@ -19,6 +21,13 @@ akka {
       "com.packt.chapter6.FriendState" = java
       "com.packt.chapter6.LatchDownClosed" = java
       "com.packt.chapter6.LatchDownOpen$" = java
+    }
+  }
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+      port = 2552
     }
   }
 }
