Understanding the configuration of Akka HTTP

--- a/akka/Hello-Akka/src/main/resources/application.conf
+++ b/akka/Hello-Akka/src/main/resources/application.conf
@@ -31,3 +31,9 @@ akka {
     }
   }
 }
+
+akka.http {
+  server.request-timeout = 60s
+  client.connecting-timeout = 60s
+  parsing.max-content-length = 1m
+}
